--- a/nosotros.html
+++ b/nosotros.html
@@ -471,8 +471,8 @@
 					<li class="dropdown">
 						<a href="#">Menú ▾</a>
 						<ul class="dropdown-menu">
-							<li><a href="charolas.html#charolas">Del Antojo al Gourmet ▶</a></li>
-							<li><a href="charolas.html#vinos">Vino Tinto ▶</a></li>
+							<li><a href="index.html#charolas">Del Antojo al Gourmet ▶</a></li>
+							<li><a href="index.html#vinos">Vino Tinto ▶</a></li>
 						</ul>
 					</li>
 					<li><a href="contacto.html">Contacto</a></li>
