--- a/pedido.html
+++ b/pedido.html
@@ -640,16 +640,16 @@
 					<img src="images/nahomi.png" alt="Nahomi" class="nahomi-image">
 				</div>
 				<ul class="nav-menu">
-					<li><a href="charolas.html">Inicio</a></li>
+					<li><a href="index.html">Inicio</a></li>
 					<li class="dropdown">
 						<a href="#">Menú ▾</a>
 						<ul class="dropdown-menu">
 							<li class="dropdown-submenu">
-								<a href="charolas.html">Del Antojo al Gourmet ▸</a>
+								<a href="index.html">Del Antojo al Gourmet ▸</a>
 								<ul class="submenu">
-									<li><a href="charolas.html#charolas">Mixtas de Carnes y Quesos</a></li>
-									<li><a href="charolas.html#quesos">Especial de Quesos</a></li>
-									<li><a href="charolas.html#carnes">Especial de Carnes y Embutidos</a></li>
+									<li><a href="index.html#charolas">Mixtas de Carnes y Quesos</a></li>
+									<li><a href="index.html#quesos">Especial de Quesos</a></li>
+									<li><a href="index.html#carnes">Especial de Carnes y Embutidos</a></li>
 								</ul>
 							</li>
 							<li><a href="#tapas">Tapas Españolas</a></li>
