--- a/index.html
+++ b/index.html
@@ -279,6 +279,25 @@
 			height: 3px;
 			background: #333;
 			transition: all 0.3s;
+			border-radius: 3px;
+		}
+
+		.menu-overlay {
+			display: none;
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background: rgba(0, 0, 0, 0.5);
+			z-index: 998;
+			opacity: 0;
+			transition: opacity 0.3s ease;
+		}
+
+		.menu-overlay.active {
+			display: block;
+			opacity: 1;
 		}
 
 		main {
@@ -1064,25 +1083,108 @@
 		}
 
 		@media (max-width: 768px) {
+			.nav-container {
+				flex-wrap: wrap;
+				position: relative;
+			}
+
+			.logo {
+				font-size: 1.2rem;
+				flex: 1;
+				min-width: 0;
+			}
+
+			.logo span {
+				font-size: 0.9rem;
+				margin-right: 0.5rem;
+			}
+
+			.logo-icon,
+			.nahomi-image {
+				height: 50px;
+			}
+
 			.nav-menu {
 				position: fixed;
 				left: -100%;
-				top: 70px;
+				top: 0;
 				flex-direction: column;
 				background: #fff;
 				width: 100%;
-				text-align: center;
-				transition: 0.3s;
+				height: 100vh;
+				text-align: left;
+				transition: left 0.3s ease;
 				box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
-				padding: 2rem 0;
+				padding: 5rem 2rem 2rem;
+				z-index: 999;
+				overflow-y: auto;
 			}
 
 			.nav-menu.active {
 				left: 0;
 			}
 
+			.nav-menu li {
+				width: 100%;
+				padding: 0.75rem 0;
+				border-bottom: 1px solid #e0e0e0;
+			}
+
+			.nav-menu > li:last-child {
+				border-bottom: none;
+			}
+
+			.nav-menu a {
+				display: block;
+				padding: 0.75rem 0;
+				font-size: 1.1rem;
+				text-shadow: none;
+				color: #333;
+			}
+
 			.hamburger {
 				display: flex;
+				order: 3;
+				z-index: 1000;
+				position: relative;
+				margin-left: auto;
+			}
+
+			.hamburger.active span:nth-child(1) {
+				transform: rotate(45deg) translate(5px, 5px);
+			}
+
+			.hamburger.active span:nth-child(2) {
+				opacity: 0;
+			}
+
+			.hamburger.active span:nth-child(3) {
+				transform: rotate(-45deg) translate(7px, -6px);
+			}
+
+			.menu-overlay {
+				display: block;
+			}
+
+			.cart-header-button {
+				order: 2;
+				margin-right: 0.5rem;
+				padding: 0.5rem 0.7rem;
+				font-size: 0.9rem;
+			}
+
+			.cart-header-button svg {
+				width: 18px;
+				height: 18px;
+			}
+
+			.cart-count {
+				width: 18px;
+				height: 18px;
+				font-size: 0.6rem;
+				min-width: 18px;
+				top: -5px;
+				right: -5px;
 			}
 
 			.dropdown-menu {
@@ -1091,7 +1193,25 @@
 				visibility: visible;
 				transform: none;
 				box-shadow: none;
-				padding-left: 1rem;
+				padding: 0;
+				margin-top: 0.5rem;
+				background: #f8f8f8;
+				border-radius: 5px;
+				width: 100%;
+			}
+
+			.dropdown-menu li {
+				padding: 0.5rem 0;
+				border-bottom: 1px solid #e0e0e0;
+			}
+
+			.dropdown-menu li:last-child {
+				border-bottom: none;
+			}
+
+			.dropdown-menu a {
+				padding: 0.5rem 1rem;
+				font-size: 1rem;
 			}
 
 			.submenu {
@@ -1100,9 +1220,22 @@
 				visibility: visible;
 				transform: none;
 				box-shadow: none;
-				padding-left: 1.5rem;
-				background: rgba(0, 0, 0, 0.1);
+				padding: 0;
 				margin-top: 0.5rem;
+				margin-left: 1rem;
+				background: #f0f0f0;
+				border-radius: 5px;
+				width: calc(100% - 1rem);
+			}
+
+			.submenu li {
+				padding: 0.5rem 0;
+			}
+
+			.submenu a {
+				padding: 0.5rem 1rem;
+				font-size: 0.95rem;
+				color: #555;
 			}
 
 			.hero h1 {
@@ -1276,6 +1409,8 @@
 			</div>
 		</nav>
 	</header>
+
+	<div class="menu-overlay" id="menuOverlay"></div>
 
 	<main>
 		<div class="charolas-page">
@@ -1517,19 +1652,67 @@
 		// Menú móvil hamburguesa
 		const hamburger = document.querySelector('.hamburger');
 		const navMenu = document.querySelector('.nav-menu');
+		const menuOverlay = document.getElementById('menuOverlay');
 
-		if (hamburger && navMenu) {
-			hamburger.addEventListener('click', () => {
+		function toggleMenu() {
+			if (hamburger && navMenu) {
 				navMenu.classList.toggle('active');
 				hamburger.classList.toggle('active');
+				if (menuOverlay) {
+					menuOverlay.classList.toggle('active');
+				}
+				// Prevenir scroll del body cuando el menú está abierto
+				if (navMenu.classList.contains('active')) {
+					document.body.style.overflow = 'hidden';
+				} else {
+					document.body.style.overflow = '';
+				}
+			}
+		}
+
+		function closeMenu() {
+			if (navMenu && navMenu.classList.contains('active')) {
+				navMenu.classList.remove('active');
+				hamburger.classList.remove('active');
+				if (menuOverlay) {
+					menuOverlay.classList.remove('active');
+				}
+				document.body.style.overflow = '';
+			}
+		}
+
+		if (hamburger && navMenu) {
+			hamburger.addEventListener('click', (e) => {
+				e.stopPropagation();
+				toggleMenu();
 			});
+
+			// Cerrar menú al hacer clic en el overlay
+			if (menuOverlay) {
+				menuOverlay.addEventListener('click', closeMenu);
+			}
 
 			// Cerrar menú al hacer clic en un enlace
 			document.querySelectorAll('.nav-menu a').forEach(link => {
 				link.addEventListener('click', () => {
-					navMenu.classList.remove('active');
-					hamburger.classList.remove('active');
+					closeMenu();
 				});
+			});
+
+			// Cerrar menú al hacer clic fuera del menú
+			document.addEventListener('click', (e) => {
+				if (navMenu.classList.contains('active') && 
+					!navMenu.contains(e.target) && 
+					!hamburger.contains(e.target)) {
+					closeMenu();
+				}
+			});
+
+			// Cerrar menú con la tecla ESC
+			document.addEventListener('keydown', (e) => {
+				if (e.key === 'Escape' && navMenu.classList.contains('active')) {
+					closeMenu();
+				}
 			});
 		}
 
