--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
 			object-fit: contain;
 		}
 
+		.by-nahomi {
+			display: none;
+		}
+
 		.nav-menu {
 			display: flex;
 			list-style: none;
@@ -1104,6 +1108,29 @@
 				height: 50px;
 			}
 
+			.by-nahomi {
+				display: block;
+				font-family: 'Brush Script MT', 'Lucida Handwriting', cursive, serif;
+				font-style: italic;
+				color: #000;
+				font-size: 1rem;
+				margin-top: 0.25rem;
+				text-align: center;
+				font-weight: 400;
+				letter-spacing: 0.5px;
+			}
+
+			.logo {
+				flex-direction: column;
+				align-items: center;
+				gap: 0.25rem;
+			}
+
+			.logo span {
+				font-size: 0.85rem;
+				margin-right: 0;
+			}
+
 			.nav-menu {
 				position: fixed;
 				left: -100%;
@@ -1366,6 +1393,7 @@
 					<img src="images/icono.png" alt="Logo" class="logo-icon">
 					<span>El Rincón del Antojo</span>
 					<img src="images/nahomi.png" alt="Nahomi" class="nahomi-image">
+					<span class="by-nahomi">by Nahomi</span>
 				</div>
 				<ul class="nav-menu">
 					<li class="dropdown">
